# job-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  probe_aria.py  pyproject.toml  run.py  test_cover_letter.py
.claude/skills/job-apply/: SKILL.md
config/: credentials.example.json  jobs.example.json  profile.example.json  standard_answers.json
docs/: architecture.md  session-2026-04-14.md  setup-guide.md
src/: __init__.py  agent.py  aria_extractor.py  aria_helpers.py  aria_yaml_parser.py  cover_letter.py  direct_fill.py  dropdown_layers.py  dropdown_match.py  dropdown_registry.py  dropdown_templates.py  email_action.py  email_reader.py  job_parser.py  layer0_cache.py  llm.py  orchestrator.py  profile.py  skyvern_client.py  utils.py
templates/: cover_letter.txt
tests/: test_agent.py  test_aria_extractor.py  test_aria_yaml_integration.py  test_direct_fill_helpers.py  test_dropdown_templates.py  test_layer0_cache.py  test_profile.py
tests/fixtures/: whatnot_ashby.yaml
